--- a/package.json
+++ b/package.json
@@ -4,31 +4,40 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build",
+        "dev": "npm run routes:generate && vite",
+        "routes:generate": "node node_modules/@tanstack/router-cli/bin/tsr.cjs generate --routes-dir=src/routes",
+        "build": "npm run routes:generate && tsc && vite build",
         "preview": "vite preview",
-        "lint": "eslint . --ext .ts,.tsx --fix",
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "format": "prettier --write .",
         "type-check": "tsc --noEmit",
         "clean": "rm -rf dist && rm -rf .vite"
     },
     "dependencies": {
+        "@hookform/resolvers": "^5.1.1",
         "@tanstack/react-query": "^5.83.0",
-        "@tanstack/react-router": "^1.129.0",
+        "@tanstack/react-router": "^1.130.9",
         "firebase": "^12.0.0",
+        "framer-motion": "^12.23.12",
+        "lucide-react": "^0.534.0",
+        "pretendard": "^1.3.9",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
+        "react-hook-form": "^7.60.0",
         "vite-plugin-pwa": "^1.0.1",
+        "zod": "^4.0.5",
         "zustand": "^5.0.6"
     },
     "devDependencies": {
         "@eslint/js": "^9.30.1",
+        "@tanstack/router-cli": "^1.129.0",
         "@types/react": "^19.1.8",
         "@types/react-dom": "^19.1.6",
         "@typescript-eslint/eslint-plugin": "^8.37.0",
         "@typescript-eslint/parser": "^8.37.0",
         "@vitejs/plugin-react": "^4.6.0",
         "autoprefixer": "^10.4.21",
+        "concurrently": "^9.2.0",
         "eslint": "^9.31.0",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-import": "^2.32.0",
@@ -43,6 +52,7 @@
         "tailwindcss": "^3.4.17",
         "typescript": "~5.8.3",
         "typescript-eslint": "^8.35.1",
-        "vite": "^5.4.19"
+        "vite": "^5.4.19",
+        "vite-plugin-svgr": "^4.3.0"
     }
 }
