--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^5.1.1",
+        "@supabase/supabase-js": "^2.55.0",
         "@tanstack/react-query": "^5.83.0",
         "@tanstack/react-router": "^1.130.9",
-        "firebase": "^12.0.0",
         "framer-motion": "^12.23.12",
         "lucide-react": "^0.534.0",
         "pretendard": "^1.3.9",
