--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,5 @@
-# Firebase
-VITE_FIREBASE_API_KEY=your_firebase_api_key
-VITE_FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=your_project_id
-VITE_FIREBASE_STORAGE_BUCKET=your_project.appspot.com
-VITE_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id
-VITE_FIREBASE_APP_ID=your_firebase_app_id
-
-# (선택) Google Maps 등 외부 API
-# VITE_MAPS_API_KEY=your_maps_api_key
-
-# 기타 환경변수
-# VITE_API_BASE_URL=https://your.api.url
+# Supabase 환경변수
+VITE_SUPABASE_URL=VITE_SUPABASE_URL
+VITE_SUPABASE_ANON_KEY=VITE_SUPABASE_ANON_KEY
+# Kakao
+VITE_KAKAO_MAP_APP_KEY=VITE_KAKAO_MAP_APP_KEY
