--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "format": "prettier --write .",
         "type-check": "tsc --noEmit",
-        "clean": "rm -rf dist && rm -rf .vite"
+        "clean": "rm -rf dist && rm -rf .vite",
+        "test": "vitest",
+        "test:ui": "vitest --ui",
+        "test:coverage": "vitest --coverage"
     },
     "dependencies": {
         "@hookform/resolvers": "^5.1.1",
@@ -31,11 +34,14 @@
     "devDependencies": {
         "@eslint/js": "^9.30.1",
         "@tanstack/router-cli": "^1.129.0",
+        "@testing-library/react": "^16.3.0",
+        "@testing-library/user-event": "^14.6.1",
         "@types/react": "^19.1.8",
         "@types/react-dom": "^19.1.6",
         "@typescript-eslint/eslint-plugin": "^8.37.0",
         "@typescript-eslint/parser": "^8.37.0",
         "@vitejs/plugin-react": "^4.6.0",
+        "@vitest/ui": "^4.0.6",
         "autoprefixer": "^10.4.21",
         "concurrently": "^9.2.0",
         "eslint": "^9.31.0",
@@ -47,12 +53,14 @@
         "eslint-plugin-react-refresh": "^0.4.20",
         "eslint-plugin-unused-imports": "^4.1.4",
         "globals": "^16.3.0",
+        "happy-dom": "^20.0.10",
         "postcss": "^8.5.6",
         "prettier": "^3.6.2",
         "tailwindcss": "^3.4.17",
         "typescript": "~5.8.3",
         "typescript-eslint": "^8.35.1",
         "vite": "^5.4.19",
-        "vite-plugin-svgr": "^4.3.0"
+        "vite-plugin-svgr": "^4.3.0",
+        "vitest": "^4.0.6"
     }
 }
