--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "eslint-plugin-unused-imports": "^4.1.4",
         "globals": "^16.3.0",
         "happy-dom": "^20.0.10",
+        "msw": "^2.12.3",
         "postcss": "^8.5.6",
         "prettier": "^3.6.2",
         "tailwindcss": "^3.4.17",
