--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.30.1",
+        "@playwright/test": "^1.57.0",
         "@tanstack/router-cli": "^1.129.0",
+        "@testing-library/jest-dom": "^6.9.1",
         "@testing-library/react": "^16.3.0",
         "@testing-library/user-event": "^14.6.1",
         "@types/react": "^19.1.8",
